# guardamaterial

./: .gitignore  AGENTS.md  Itens-Itens CPP.csv  Local-Grid view.csv  Movimentos-Grid view.csv  README.md  Seccoes-Grid view.csv  Usuarios-Grid view.csv  agente_base.md  agente_esquema_airtable.md  agente_inventario.md  agente_limpeza.md  agente_movimentos.md  airtable_client.py  app.py  pyproject.toml  readme.md  requirements.txt
.github/: copilot-instructions.md
.streamlit/: config.toml  secrets.toml.example
inventario_escuteiros/: README.md  airtable_client.py  requirements.txt  streamlit_app.py
inventario_escuteiros/pages/: 1_Visão_Geral.py  2_Gestão_de_Itens.py  3_Auditorias.py  4_Movimentos.py  5_Dashboard.py
inventario_escuteiros/utils/: auth.py  helpers.py  layout.py
scripts/: check_airtable_tables.py
src/: __init__.py  auth.py  config.py  data_manager.py  schema_sync.py
src/guardamaterial/: __init__.py  airtable.py  cli.py  config.py
src/pages/: __init__.py  admin.py  dashboard.py  items.py  locations.py  movements.py  reports.py  sections.py
src/ui/: __init__.py  sidebar.py  theme.py
tests/: test_airtable.py  test_airtable_client_module.py  test_app_metadata.py  test_auth_config.py  test_check_airtable_tables.py  test_config.py  test_demo_data.py  test_helpers.py
