[project]
name = "guardamaterial"
version = "0.1.0"
description = "Utilities for loading Airtable secrets and fetching records."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
guardamaterial = "guardamaterial.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
